--- a/WebApplication/Views/ShopAssistant/Details.cshtml
+++ b/WebApplication/Views/ShopAssistant/Details.cshtml
@@ -11,15 +11,15 @@
     <legend>ShopAssistant</legend>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => Model.Id)
-    </div>
+        <strong>@Html.DisplayNameFor(model => Model.Id)</strong>
+</div>
     <div class="display-field">
         @Html.DisplayFor(model => Model.Id)
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => Model.ShopAssistantName)
-    </div>
+        <strong>@Html.DisplayNameFor(model => Model.ShopAssistantName)</strong>
+</div>
     <div class="display-field">
         @Html.DisplayFor(model => Model.ShopAssistantName)
     </div>
