--- a/WebApplication/Views/Customer/Create.cshtml
+++ b/WebApplication/Views/Customer/Create.cshtml
@@ -15,13 +15,13 @@
     <fieldset>
         <legend>Customer</legend>
 
-        <div class="editor-label">
+        @*<div class="editor-label">
             @Html.LabelFor(model => Model.Id)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => Model.Id)
             @Html.ValidationMessageFor(model => Model.Id)
-        </div>
+        </div>*@
 
         <div class="editor-label">
             @Html.LabelFor(model => Model.CustomerName)
