--- a/WebApplication/Views/Product/Create.cshtml
+++ b/WebApplication/Views/Product/Create.cshtml
@@ -1,22 +1,18 @@
 ﻿@using WebApplication.Models.DTO;
-@model CustomerDTO
-
+@model ProductDTO
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
 }
 
-<h2>Edit</h2>
+<h2>Create</h2>
 
-@using (Html.BeginForm())
-{
+@using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>Customer</legend>
-
-        @Html.HiddenFor(model => Model.Id)
+        <legend>Product</legend>
 
         @*<div class="editor-label">
             @Html.LabelFor(model => Model.Id)
@@ -27,23 +23,23 @@
         </div>*@
 
         <div class="editor-label">
-            @Html.LabelFor(model => Model.CustomerName)
+            @Html.LabelFor(model => Model.ProductName)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => Model.CustomerName)
-            @Html.ValidationMessageFor(model => Model.CustomerName)
+            @Html.EditorFor(model => Model.ProductName)
+            @Html.ValidationMessageFor(model => Model.ProductName)
         </div>
 
-        @*<div class="editor-label">
-            @Html.LabelFor(model => Model.)
+        <div class="editor-label">
+            @Html.LabelFor(model => Model.ProductPrice)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => Model.CustomerName)
-            @Html.ValidationMessageFor(model => Model.CustomerName)
-        </div>*@
+            @Html.EditorFor(model => Model.ProductPrice)
+            @Html.ValidationMessageFor(model => Model.ProductPrice)
+        </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" value="Create" />
         </p>
     </fieldset>
 }
@@ -55,4 +51,3 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
-
