--- a/WebApplication/Views/Product/Delete.cshtml
+++ b/WebApplication/Views/Product/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@using WebApplication.Models.DTO;
-@model CustomerDTO
+@model ProductDTO
 
 @{
     ViewBag.Title = "Delete";
@@ -10,7 +10,7 @@
 
 <h3>Are you sure you want to delete this record?</h3>
 <fieldset>
-    <legend>Customer</legend>
+    <legend>Product</legend>
 
     <div class="display-label">
         @Html.DisplayNameFor(model => Model.Id)
@@ -20,18 +20,18 @@
     </div>
 
     <div class="display-label">
-        @Html.DisplayNameFor(model => Model.CustomerName)
+        @Html.DisplayNameFor(model => Model.ProductName)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => Model.CustomerName)
+        @Html.DisplayFor(model => Model.ProductName)
     </div>
 
-    @*<div class="display-label">
-        @Html.DisplayNameFor(model => Model.CustomerName)
+    <div class="display-label">
+        @Html.DisplayNameFor(model => Model.ProductPrice)
     </div>
     <div class="display-field">
-        @Html.DisplayFor(model => Model.CustomerName)
-    </div>*@
+        @Html.DisplayFor(model => Model.ProductPrice)
+    </div>
 </fieldset>
 @using (Html.BeginForm())
 {
