Added redirect to index tab for create order action. Changed update action for model controllers - now it only changes, does not add anymore. Removed excluded BL and some other excluded classes. Request validation added.

--- a/WebApplication/Views/ShopAssistant/Edit.cshtml
+++ b/WebApplication/Views/ShopAssistant/Edit.cshtml
@@ -18,13 +18,13 @@
 
         @Html.HiddenFor(model => Model.Id)
 
-        @*<div class="editor-label">
+        <div class="editor-label">
             @Html.LabelFor(model => Model.Id)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => Model.Id)
+            @Html.DisplayTextFor(model => Model.Id)
             @Html.ValidationMessageFor(model => Model.Id)
-        </div>*@
+        </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => Model.ShopAssistantName)
