--- a/WebApplication/Views/Order/Edit.cshtml
+++ b/WebApplication/Views/Order/Edit.cshtml
@@ -19,6 +19,14 @@
         @Html.HiddenFor(model => Model.Id)
 
         <div class="editor-label">
+            @Html.LabelFor(model => Model.Id)
+        </div>
+        <div class="editor-field">
+            @Html.DisplayTextFor(model => Model.Id)
+            @Html.ValidationMessageFor(model => Model.Id)
+        </div>
+
+        <div class="editor-label">
             @Html.LabelFor(model => Model.OrderDate)
         </div>
         <div class="editor-field">
