--- a/WebApplication/Views/Order/Delete.cshtml
+++ b/WebApplication/Views/Order/Delete.cshtml
@@ -12,53 +12,54 @@
 <fieldset>
     <legend>Order</legend>
 
-    <div class="editor-label">
-        @Html.LabelFor(model => Model.OrderDate)
+    <div class="display-label">
+        <strong>@Html.DisplayNameFor(model => Model.Id)</strong>
     </div>
-    @*<div class="editor-field">
-        @Html.EditorFor(model => Model.OrderDate)
-        @Html.ValidationMessageFor(model => Model.OrderDate)
-    </div>*@
+    <div class="display-field">
+        @Html.DisplayFor(model => Model.Id)
+    </div>
 
-    <div class="editor-label">
-        @Html.LabelFor(model => Model.Customer)
+    <div class="display-label">
+        <strong>@Html.DisplayNameFor(model => Model.OrderDate)</strong>
     </div>
-    @*<div class="editor-field">
-        @Html.EditorFor(model => Model.Customer)
-        @Html.ValidationMessageFor(model => Model.Customer)
-    </div>*@
+    <div class="display-field">
+        @Html.DisplayFor(model => Model.OrderDate)
+    </div>
 
-    <div class="editor-label">
-        @Html.LabelFor(model => Model.ShopAssistant)
+    <div class="display-label">
+        <strong>@Html.DisplayNameFor(model => Model.Customer)</strong>
     </div>
-    @*<div class="editor-field">
-        @Html.EditorFor(model => Model.ShopAssistant)
-        @Html.ValidationMessageFor(model => Model.ShopAssistant)
-    </div>*@
+    <div class="display-field">
+        @Html.DisplayFor(model => Model.Customer)
+    </div>
 
-    <div class="editor-label">
-        @Html.LabelFor(model => Model.Product)
+    <div class="display-label">
+        <strong>@Html.DisplayNameFor(model => Model.ShopAssistant)</strong>
     </div>
-    @*<div class="editor-field">
-        @Html.EditorFor(model => Model.Product)
-        @Html.ValidationMessageFor(model => Model.Product)
-    </div>*@
+    <div class="display-field">
+        @Html.DisplayFor(model => Model.ShopAssistant)
+    </div>
 
-    <div class="editor-label">
-        @Html.LabelFor(model => Model.Amount)
+    <div class="display-label">
+        <strong>@Html.DisplayNameFor(model => Model.Product)</strong>
     </div>
-    @*<div class="editor-field">
-        @Html.EditorFor(model => Model.Amount)
-        @Html.ValidationMessageFor(model => Model.Amount)
-    </div>*@
+    <div class="display-field">
+        @Html.DisplayFor(model => Model.Product)
+    </div>
 
-    <div class="editor-label">
-        @Html.LabelFor(model => Model.Price)
+    <div class="display-label">
+        <strong>@Html.DisplayNameFor(model => Model.Amount)</strong>
     </div>
-    @*<div class="editor-field">
-        @Html.EditorFor(model => Model.Price)
-        @Html.ValidationMessageFor(model => Model.Price)
-    </div>*@
+    <div class="display-field">
+        @Html.DisplayFor(model => Model.Amount)
+    </div>
+
+    <div class="display-label">
+        <strong>@Html.DisplayNameFor(model => Model.Price)</strong>
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => Model.Price)
+    </div>
 
 </fieldset>
 @using (Html.BeginForm())
